--- a/composer.json
+++ b/composer.json
@@ -61,6 +61,9 @@
             "pestphp/pest-plugin": true
         }
     },
+    "platform": {
+        "php": "8.1.0"
+    },
     "minimum-stability": "stable",
     "prefer-stable": true
 }
